<?xml version="1.0" encoding="utf-8"?>
<com.lightsky.video.widget.video.FullScreenEndLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/video_full_end"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c0000000"
    android:tag="player_control_end_view_tag"
    android:visibility="invisible">

    <include
        layout="@layout/video_full_embed_layout_top"
        android:layout_width="match_parent"
        android:layout_height="36dp" />

    <LinearLayout
        android:id="@+id/share_container"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/share_weixin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/video_player_fenxiang_weixin"
            android:gravity="center_horizontal"
            android:text="@string/share_weixin"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/share_weixin_circle"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/video_player_fenxiang_pyquan"
            android:gravity="center_horizontal"
            android:text="@string/share_weixin_circle"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/share_sina"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/video_player_fenxiang_weibo"
            android:gravity="center_horizontal"
            android:text="@string/share_sina"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/share_qq"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/video_player_fenxiang_qq"
            android:gravity="center_horizontal"
            android:text="@string/share_qq"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/share_qzone"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:drawablePadding="5dp"
            android:drawableTop="@drawable/video_player_fenxiang_qqkj"
            android:gravity="center_horizontal"
            android:text="@string/share_qzone"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/title_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/share_container"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/text_share_video"
        android:textColor="@android:color/white"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/video_error_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/share_container"
        android:layout_marginBottom="10dp"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:text="@string/text_error_offline"
        android:textColor="@android:color/white"
        android:textSize="15dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/video_center_pre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:drawableTop="@drawable/bofang_shangyige"
            android:gravity="center"
            android:text="@string/btn_pre"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/video_center_replay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:drawableTop="@drawable/bofang_chongbo"
            android:gravity="center"
            android:text="@string/btn_replay"
            android:textColor="#b0ffffff"
            android:textSize="10dp" />

        <RelativeLayout
            android:id="@+id/next_play_info_container"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:background="#66000000">

            <com.lightsky.video.widget.StrokeProgressbar
                android:id="@+id/middle_progress_bar"
                android:layout_width="72dp"
                android:layout_height="42dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp" />

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/next_video_thumb"
                android:layout_width="68dp"
                android:layout_height="38dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="6dp"
                android:scaleType="fitXY"
                app:placeholderImage="@drawable/common_default_icon"
                app:placeholderImageScaleType="fitXY" />

            <View
                android:id="@+id/close_auto_mask"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true" />

            <ImageView
                android:id="@+id/close_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/upload_video_delete" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="13dp"
                android:layout_toLeftOf="@+id/close_auto"
                android:layout_toRightOf="@+id/next_video_thumb">

                <TextView
                    android:id="@+id/text_next_play"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/text_next_play_auto_play_on"
                    android:textColor="#90ffffff"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/text_next_play_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/text_next_play"
                    android:layout_marginTop="2dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#b0ffffff"
                    android:textSize="16dp" />

            </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>

</com.lightsky.video.widget.video.FullScreenEndLayout>