<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hot_word_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    <View
        android:id="@+id/hot_word_top"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/common_list_bg_color"
        />

    <TextView
        android:id="@+id/hot_word_title"
        style="@style/style_common_list_title_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hot_word_top"
        android:gravity="center_vertical"
        android:paddingBottom="3dp"
        android:paddingLeft="13dp"
        android:paddingTop="10dp"
        android:text="@string/hot_word_title"
        android:textSize="14dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/hot_word_switch"
        style="@style/style_common_list_title_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/hot_word_top"
        android:drawableLeft="@drawable/hot_word_switch"
        android:drawablePadding="2dp"
        android:gravity="center_vertical"
        android:paddingBottom="3dp"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:paddingTop="12dp"
        android:text="@string/hot_word_switch"
        android:textColor="@color/detail_watch_later_color"
        android:textSize="12dp"/>

    <com.lightsky.video.widget.HotWordWallLayout
        android:id="@+id/hot_word_show_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hot_word_title"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="6dp"
        />

    <RelativeLayout
        android:id="@+id/hot_word_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/hot_word_selected_item_height"
        android:layout_below="@+id/hot_word_show_layout"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="13dp"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/hot_word_confirm"
            style="@style/style_common_list_title_dark"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_hot_word_checked_bg"
            android:gravity="center_vertical"
            android:paddingLeft="13dp"
            android:paddingRight="13dp"
            android:text="@string/ok"
            android:textColor="@color/white"
            android:textSize="12dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/hot_word_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_marginRight="6dp"
            android:layout_toLeftOf="@+id/hot_word_confirm"
            />
    </RelativeLayout>

    <View
        android:id="@+id/hot_word_bottom"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_below="@+id/hot_word_confirm_layout"
        android:layout_marginTop="8dp"
        android:background="@color/common_list_bg_color"
        />
</RelativeLayout>
